# car_gazebo

./: LICENSE  README.md  run_car_gazebo.bash
car_gazebo/: CMakeLists.txt  package.xml
car_gazebo_models/: CMakeLists.txt  package.xml
car_gazebo_models/cfg/rviz/: car.rviz  cars.rviz
car_gazebo_models/launch/: empty_world.launch  odom_to_tf_node.launch
car_gazebo_models/launch/car/: car.gazebo.launch  cars.launch  gamepad.launch  rviz.car.launch  rviz.launch
car_gazebo_plugins/: .package.xml.kate-swp  CMakeLists.txt  package.xml  setup.py
car_gazebo_plugins/cfg/: Ackermann.cfg  CarAckermann.cfg
car_gazebo_plugins/include/car_gazebo_plugins/: PubQueue.h  gazebo_ros_diff_drive.h
car_gazebo_plugins/include/gazebo_plugins/: gazebo_ros_ackermann_drive.h  gazebo_ros_wheels_steerable.h
car_gazebo_plugins/src/: gazebo_ros_ackermann_drive.cpp  gazebo_ros_diff_drive.cpp  gazebo_ros_wheels_steerable.cpp  laserToCluster.py  ltc.launch  sb2o.launch  steer_between_2_objects.py
